[package]
name = "kiwilua-bot"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
teloxide = { version = "0.17", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
dashmap = "6"
zip = "2"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
